--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <h1> All About Me</h1>
-<title> This is my portfolio website </title>
-
+<title> This is my website </title>
+<img src="photo.jpg"/>
 <p>
-My name is Lee Bryan from class 1A I am a student of Dunman High School. Currently in 1st year Dunman high school. I scored 256+3 for PSLE and I am doing very well in school now. I am in St Johns Brigade. Overall I am enoying my life here in Dunman High school
-</p>
-<p> I have many special abilities such as being able to help people in need without hesitation.
- </p>
+My name is Lee Bryan. I am a student of Dunman High School. Currently in 1st year high school. </p>
+<p>
+Here’s our school website link <a href ="www.dhs.sg"> Dunman High School  </a>. </p>
 <br>
 <p>Here are the things I love to do the most : </p> 
 <ul>
-<li>playing thomas and friends toys
- <img src="https://vignette.wikia.nocookie.net/starwars/images/2/2c/Vebb_Grievous_Fisto.jpg/revision/latest/scale-to-width-down/322?cb=20120924013414"/>
+<li>Playing video games</li>
+<a  </a>
 <li>watching star wars</li>
-<li>doing math and science work</li>
+<li>Reading Adventure Books</li>
+</ul>
+</body>
+</html>
+
